# srpc

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  clangify.py  srpc_files.cmake
include/srpc/common/: executor_layer.h  layer.h  layer_list.h  slot.h
include/srpc/common/layers/: pack_unpack.h
include/srpc/common/packint/: fixint.h  varint.h
lib/common/protobuf/: CMakeLists.txt
lib/common/protobuf/protocol-base/: errors.proto  lowlevel.proto  options.proto  srpc.proto
lib/protobuf/: CMakeLists.txt
lib/protobuf/protocol-base/: lowlevel.proto
tests/: CMakeLists.txt  main.cpp
